Fix spacing layout between card and ribbon

--- a/src/app/components/page/styles/page-templates.scss
+++ b/src/app/components/page/styles/page-templates.scss
@@ -35,7 +35,7 @@
     }
     
     .landing-page-ribbon{
-      margin-top: 22rem;
+      margin-top: 4rem;
       padding-top: var(--sdds-spacing-element-16);
       padding-bottom: var(--sdds-spacing-element-32);
     
@@ -59,6 +59,9 @@
     }
 
     @media (min-width:1056px){
+      .landing-page-ribbon{
+        margin-top: 13rem;
+      }
       .cover-image{
         height: 532px;
         margin-bottom: var(--sdds-spacing-element-24);
